# HCMAI2025_Baseline

./: .dockerignore  .env.example  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  README_v2.md  README_v3.md  TROUBLESHOOTING.md  app_entrypoint.sh  app_entrypoint_wins.sh  dev_setup.sh  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/agent/: agent.py  main_agent.py
app/common/repository/: __init__.py  base.py
app/controller/: agent_controller.py  query_controller.py
app/core/: dependencies.py  lifespan.py  logger.py  settings.py
app/factory/: factory.py
app/models/: keyframe.py
app/repository/: milvus.py  mongo.py
app/router/: agent_api.py  keyframe_api.py
app/schema/: agent.py  interface.py  request.py  response.py
app/service/: __init__.py  model_service.py  ocr_service.py  search_service.py  translator_service.py
gui/: main.py
migration/: app_migration.sh  download_migration_data.py  download_open_clip_model.py  embedding_migration.py  embedding_pipeline.py  keyframe_migration.py  quick_convert_id2index.py
